# Frost

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DOGFOODING.md  IMAGES.md  LICENSE  QUICKSTART.md  README.md  harada.rb  install.sh  pyproject.toml
.github/workflows/: release.yml
benchmarks/: results.json  run_benchmarks.py
docs/: DEMO_VIDEO_SCRIPT.md  PROFESSIONAL_VIDEO_PRODUCTION.md
python/frost/: __init__.py  __main__.py  branch_loop.py  cli.py  context.py  core.py  installer.py  micro_branch.py  orchestrator.py  server.py
python/frost/backends/: __init__.py  docker.py  native.py
python/frost/runtime/: cache.py  checkpoint.py  history.py  session.py
python/frost/v2/: __init__.py  branch_loop.py  memory.py  micro_branch.py  orchestrator.py  uncertainty.py  validator.py
python/havfrys/: __init__.py  __main__.py  branch_loop.py  cli.py  context.py  core.py  installer.py  memory.py  micro_branch.py  orchestrator.py  server.py  ui.py  uncertainty.py  validator.py
python/havfrys/backends/: __init__.py  docker.py  native.py
scripts/: frost_demo_sim.py  record_demo_vhs.tape
src/: compress.rs  core.rs  git.rs  github.rs  layout.rs  lib.rs  main.rs  spec.rs  storage.rs  tui.rs
src/engines/: mod.rs
src/engines/compression/: adaptive_sizer.rs  anchor_selector.rs  bm25.rs  content_detector.rs  diff_compressor.rs  log_compressor.rs  mod.rs
src/engines/compression/smart_crusher/: analyzer.rs  anchors.rs  classifier.rs  config.rs  constraints.rs  crusher.rs  crushers.rs  error_keywords.rs  field_detect.rs  hashing.rs  mod.rs  orchestration.rs  outliers.rs  planning.rs  statistics.rs  stats_math.rs  traits.rs  types.rs
src/engines/compression/smart_crusher/compaction/: classifier.rs  compactor.rs  formatter.rs  ir.rs  mod.rs  walker.rs
src/engines/compression/text_crusher/: config.rs  crusher.rs  mod.rs
src/engines/loop_detection/: config.rs  engine.rs  history.rs  state.rs
src/runtime/: mod.rs
src/runtime/ccr/: mod.rs
src/runtime/ccr/backends/: in_memory.rs  mod.rs
tests/: ci_test.rs  graph_test.rs  handoff_test.rs  intake_test.rs  linking_test.rs  stats_test.rs  test_engine.py  test_improvements_stress.py  test_installer.py  test_session.py  test_v2.py
