[package]
name = "frost-core"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "FROST — Agent execution optimization (Rust core)"

[lib]
name = "frost_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py38"] }
serde = { version = "1.0.228", features = ["derive", "alloc"] }
serde_json = { version = "1.0.150", default-features = false, features = ["alloc"] }
serde_yml = "0.0.13"
regex = "1"
thiserror = "2.0"
tracing = "0.1"
flate2 = "1"
aho-corasick = "1"
blake3 = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
