[package]
name = "havfrys-core"
version = "0.3.0"
edition = "2021"
license = "BUSL-1.1"
description = "HAVFRYS — Agent execution optimization and log compression engine by HAVFRYS Labs (Rust core)"
repository = "https://github.com/Devaretanmay/HAVFRYS"
homepage = "https://github.com/Devaretanmay/HAVFRYS"
documentation = "https://docs.rs/crate/havfrys-core"
keywords = ["ai", "mcp", "compression", "execution", "agent"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "havfrys_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py38"] }
serde = { version = "1.0.228", features = ["derive", "alloc"] }
serde_json = { version = "1.0.150", default-features = false, features = ["alloc"] }
serde_yml = "0.0.13"
regex = "1"
thiserror = "2.0"
tracing = "0.1"
flate2 = "1"
aho-corasick = "1"
blake3 = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
