[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "frost"
version = "0.2.0"
description = "Engineering execution for AI agents — one tool, one capability: execute tasks efficiently"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
]
[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "frost._core"

[project.scripts]
frost = "frost.cli:main"

