[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "havfrys"
version = "0.3.0"
description = "Autonomous engineering execution platform for AI agents — execution resilience, micro-branching, and log compression by HAVFRYS Labs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BUSL-1.1" }
keywords = ["ai", "agents", "mcp", "developer-tools", "execution-engine", "context-compression"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Devaretanmay/HAVFRYS"
Repository = "https://github.com/Devaretanmay/HAVFRYS"
Documentation = "https://github.com/Devaretanmay/HAVFRYS#readme"
Issues = "https://github.com/Devaretanmay/HAVFRYS/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "havfrys._core"

[project.scripts]
havfrys = "havfrys.cli:main"
